# OpenMP

./: 1.cpp  10.cpp  11.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  CMakeLists.txt
tabl/: 1.csv  10_1.csv  10_2.csv  11.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  mpi1.csv  mpi2.csv  mpi3.csv
